<resources>
    <string name="app_name">MediPro</string>
    <string name="order_medicines">Order Medicines</string>
    <string name="book_test">Book Test/Scan</string>
    <string name="shopping">Shopping</string>
    <string name="ayush">Ayush</string>
    <string name="shopping_title">SHOPPING</string>
    <string name="health_center">Health Center</string>
    <string name="health_bank">Health Bank</string>
    <string name="shopping_upload">UPLOAD</string>
    <string name="pet_clinic">Pet Clinic</string>
    <string name="ask_me">Ask Me Anything</string>
    <string name="shopping_discount">Quick Buy Up to 20% Discount!</string>
    <string name="shopping_order">Order with prescription</string>
    <string name="homeopathy">HOMEOPATHY</string>
    <string name="ayurvedic">AYURVEDIC</string>
    <string name="siddha">SIDDHA</string>
    <string name="yoga">YOGA</string>
    <string name="ent">ENT Specialist</string>
    <string name="fav_doc">My Favorite Doctors</string>
    <string name="gynaecologists">Gynaecologists</string>
    <string name="gastroenterologists">Gastroenterologists</string>
    <string name="order_with_pres">Order with prescription</string>
    <string name="year">2017</string>
    <string name="quick_buy">Quick Buy Upto 20% Discount!</string>
    <string name="popular_products">Popular Products</string>
    <string name="view_all">View All</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="find">Find doctors click, hospital etc...</string>
    <string name="specify_medicines">Specify Medicines :</string>
    <string name="order_all_medicines">Order all medicines as per prescription.</string>
    <string name="not_sure">Not sure, Call me for details.</string>
    <string name="specify">Let me specify the medicines.</string>
    <string name="insurance">INSURANCE</string>
    <string name="opthalmologist">Opthalmologist</string>
    <string name="phychiartist">Phychiartist</string>
    <string name="gym">GYM</string>
    <string name="spa">SPA</string>
    <string name="blood_bank">BLOOD BANK</string>
    <string name="hyphen">-</string>
    <string name="stem_cell">STEM CELL</string>
    <string name="phone_code">+91</string>
    <string name="chennai">Chennai</string>
    <string name="guindy">Guindy,</string>
    <string name="call">CALL</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="code_via_call">Get code via call</string>
    <string name="no_opt">Did not receive the code?</string>
    <string name="invite">Ask your friends to signup with your referral</string>
    <string name="invite_friends">code and make an initial payment Once done,</string>
    <string name="invite_earn">both you and your friend each earn \u20B950.</string>
    <string name="resend_opt">RESEND CODE</string>
    <string name="code">MP1234</string>
    <string name="invite_to_earn">INVITE TO EARN </string>
    <string name="share_now">SHARE NOW</string>
    <string name="enter_opt">Enter the verification code(OPT)sent to your mobile</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="terms">
        <font size="10">By continuing you agree</font>
        <font size="14">Terms &amp; Conditions</font>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="find_doctors">
        <font size="35">Find Doctors,</font>\n
        <font size="10">Clinic, hospitals, specialists</font>
    </string>
    <string name="upload_continue">CONTINUE</string>
    <string name="upload_preload">Preload</string>
    <string name="upload_gallery">Gallery</string>
    <string name="upload_camera">Camera</string>
    <string name="record_by_user">Records added by you</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="amt">\u20B9297.0</string>
    <string name="offer">%15.0 OFF</string>
    <string name="dosage">Dosage</string>
    <string name="dose">1.0 dose</string>
    <string name="time">Timings</string>
    <string name="days">Days</string>
    <string name="duration">Duration</string>
    <string name="five_days">5 Days</string>
    <string name="save">SAVE</string>
    <string name="baby_care">Baby Care</string>
    <string name="filter">FILTER</string>
    <string name="sort">SORT</string>
    <string name="available">Available Today</string>
    <string name="in_hospital">In Hospital</string>
    <string name="booktest">BOOK TEST</string>
    <string name="find_doc">FIND DOCTORS,</string>
    <string name="clinics">Clinics, hospitals, specialites</string>
    <string name="everyday">Everyday</string>
    <string name="timings_dose">10 AM, 2 PM, 10 PM</string>
    <string name="title">Title</string>
    <string name="medicine">Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="amount">\u20B9349.0</string>
    <string name="type_reminder">Type of Reminder</string>
    <string name="remainder">ADD REMINDER</string>
    <string name="product_name">Product Name</string>
    <string name="fitness">Fitness \t Management</string>
    <string name="date">15</string>
    <string name="nov">Nov</string>
    <string name="my_orders">My Orders</string>
    <string name="records_for_user">Record for user</string>
    <string name="medical_records">MEDICAL RECORDS</string>
    <string name="add_record">ADD A RECORD</string>
    <string name="submit">SUBMIT</string>
    <string name="menu">menu</string>
    <string name="close">close</string>
    <string name="edit">edit</string>
    <string name="center_name">Center Name</string>
    <string name="location">Location</string>
    <string name="distance">1.62 km</string>
    <string name="book">BOOK</string>
    <string name="yrs">10 Yrs</string>
    <string name="inr">INR 600</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="address1">Address line 1</string>
    <string name="address2">Address line 2</string>
    <string name="visit_time">Visiting Timings</string>
    <string name="visit">06:30 am - 07.30 am</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thr">THR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="upload_pres">UPLOAD YOUR\nPRESCRIPTION</string>
    <string name="book_appi">BOOK APPOINTMENT</string>
    <string name="fee">Consultation Fees</string>
    <string name="experince">Experience</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="favorite_doctor">My Favorite Doctors</string>
    <string name="timings">open today 07 am - 08 pm</string>
    <string name="more">more</string>
    <string name="search">search</string>
    <string name="dr_name">Dr.Name</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="guindy_chennai">Guindi,Chennai</string>
    <string name="shop">shop</string>
    <string name="signup">signup</string>
    <string name="user_name">USER NAME</string>
    <string name="dermatologists">Dermatologists</string>
    <string name="medical_details">Medicine Details</string>
    <string name="admob_app_id">ca-app-pub-4893336231986175-8892820885</string>
    <string name="banner_home_footer">ca-app-pub-4893336231986175/6291117393</string>

    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email Id</string>
    <string name="gender">Gender</string>
    <string name="dob">Date Of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="marital_status">Marital Status</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="add_photo">Add your Profile Photo</string>
    <string name="take_photo">Take a photo</string>
    <string name="upload_photo">Upload from gallery</string>
    <string name="your_name">What is your name?</string>
    <string name="your_number">What is your number?</string>
    <string name="your_email">What is your email id?</string>
    <string name="your_gender">Which gender do you identify with?</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="others">OTHER</string>
    <string name="marital">Are you married?</string>
    <string name="single">SINGLE</string>
    <string name="married">MARRIED</string>
    <string name="blood_group_profile">What is your blood group?</string>
    <string name="a">A+</string>
    <string name="negA">A-</string>
    <string name="b">B+</string>
    <string name="negB">B-</string>
    <string name="o">O+</string>
    <string name="negO">O-</string>
    <string name="ab">AB+</string>
    <string name="negAB">AB-</string>
    <string name="save_details">SAVE</string>
    <string name="profile_weigh">How much do you weigh? \n (in kgs)</string>
    <string name="birth_date">When is your birthday?</string>
    <string name="set_date">Press the below button to set the date</string>
    <string name="btn_set_date">Click Me</string>
    <string name="your_height">What is your height?</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="remove">Remove photo</string>
</resources>
