<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.android.medipro.ui.fragments.InviteToEarn.InviteToEarnFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/ad_common"
        android:orientation="vertical">
        <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/very_small_text"
            android:contentDescription="@string/more"
                android:src="@drawable/left_arrow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/xlarge_text"
            android:layout_marginLeft="@dimen/xlarge_text"
            android:textSize="@dimen/xlarge_text"
            android:text="@string/invite_to_earn"/>
    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/xlarge_text"
            android:layout_height="0dp"
            android:layout_weight="1"
            >


    <TextView
        android:text="@string/invite"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/xlarge_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/invite_friends"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/invite_earn"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
       />
        </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="@dimen/xlarge_text"
        android:background="@drawable/invite_bg"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/code"
            android:textColor="@color/white"
            android:textSize="@dimen/xlarge_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:id="@+id/btn_share_now"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/share_now"
        android:textSize="@dimen/medium_text"
        android:background="@color/button_color_main"
        android:layout_marginTop="@dimen/xlarge_text"
        android:textColor="@color/white"/>
</LinearLayout>
