<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/xlarge_text"
        android:layout_margin="@dimen/medium_text"
        android:text="@string/your_gender"/>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_margin="@dimen/medium_text"
           android:layout_height="wrap_content">
           <Button
               android:id="@+id/btn_gender_male"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:text="@string/male"
               android:textColor="@color/red"
               android:layout_height="wrap_content" />
           <Button
               android:id="@+id/btn_gender_female"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:text="@string/female"
               android:textColor="@color/red"
               android:layout_height="wrap_content" />
           <Button
               android:id="@+id/btn_gender_other"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:text="@string/others"
               android:textColor="@color/red"
               android:layout_height="wrap_content" />
       </LinearLayout>



</LinearLayout>
