<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/xlarge_text"
        android:textStyle="bold"
        android:layout_margin="@dimen/medium_text"
        android:text="@string/your_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_text"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/xlarge_text"
            android:textStyle="bold"
            android:text="@string/phone_code"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/xlarge_text"
            android:text="@string/hyphen"
          />
        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="@dimen/xlarge_text"

            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_profile_number"
        android:layout_width="wrap_content"
        android:text="@string/add"
        android:textColor="@color/red"
        android:layout_height="wrap_content" />

</LinearLayout>
