<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/xlarge_text"
      android:layout_margin="@dimen/medium_text"
        android:text="@string/birth_date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text"
        android:layout_margin="@dimen/small_text"
        android:text="@string/set_date"/>


    <Button
        android:id="@+id/btn_dob"
        android:layout_width="wrap_content"
        android:text="@string/btn_set_date"
        android:textColor="@color/red"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_text"/>

</LinearLayout>
