<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/small_text"
                android:contentDescription="@string/more"
                android:src="@drawable/left_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/marginSizeUltraSmall"
                android:layout_marginStart="@dimen/marginSizeUltraSmall"
                android:gravity="center"
                android:text="@string/phychiartist"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/guindy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/chennai"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mini_text"
                    android:contentDescription="@string/location"
                    android:src="@drawable/mappin" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/very_small_text"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/mini_text"
                android:layout_marginStart="@dimen/mini_text"
                android:background="@drawable/dark_red_rounded_rectangle"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingLeft="@dimen/mini_text"
                android:paddingRight="@dimen/mini_text"
                android:paddingTop="3dp"
                android:text="@string/available"
                android:textColor="@color/white"
                android:textSize="@dimen/smaller_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/marginSizeSmall"
                android:layout_marginStart="@dimen/marginSizeSmall"
                android:background="@drawable/dark_red_rounded_rectangle"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingLeft="@dimen/mini_text"
                android:paddingRight="@dimen/mini_text"
                android:paddingTop="3dp"
                android:text="@string/in_hospital"
                android:textColor="@color/white"
                android:textSize="@dimen/smaller_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mini_text"
                    android:contentDescription="@string/search"
                    android:src="@drawable/small_search" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mini_text"
                    android:contentDescription="@string/filter"
                    android:src="@drawable/filter_white" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/lv_phychiartist_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/smaller_text">

    </ListView>


</LinearLayout>
