<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_text"
        android:layout_marginRight="@dimen/small_text"
        android:gravity="end">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:paddingBottom="@dimen/mini_text"
            android:contentDescription="@string/close"
            android:paddingLeft="@dimen/mini_text"
            android:paddingStart="@dimen/mini_text"
            android:paddingRight="@dimen/marginSizeUltraSmall"
            android:paddingEnd="@dimen/marginSizeUltraSmall"
            android:paddingTop="@dimen/mini_text"
            android:src="@drawable/close_red" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_text"
        android:layout_marginRight="@dimen/small_text"
        android:text="@string/specify_medicines"
        android:textColor="@color/red"
        android:textSize="@dimen/medium_text" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_text"
        android:layout_marginRight="@dimen/small_text"
        android:layout_marginTop="@dimen/mini_text">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mini_text"
            android:button="@null"
            android:drawableStart="@drawable/check_grey"
            android:drawableLeft="@drawable/check_grey"
            android:drawablePadding="@dimen/mini_text"
            android:text="@string/order_all_medicines"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/small_text" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mini_text"
            android:button="@null"
            android:drawableLeft="@drawable/check_grey"
            android:drawableStart="@drawable/check_grey"
            android:drawablePadding="@dimen/mini_text"
            android:text="@string/not_sure"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/small_text" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mini_text"
            android:button="@null"
            android:drawableLeft="@drawable/checkred"
            android:drawableStart="@drawable/checkred"
            android:drawablePadding="@dimen/mini_text"
            android:text="@string/specify"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/small_text" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_text"
        android:layout_marginRight="@dimen/small_text"
        android:layout_marginTop="@dimen/small_text"
        android:background="@drawable/black_box"
        android:padding="@dimen/mini_text"
        android:text="@string/medical_details"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/medium_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_text"
        android:background="@color/upload_background_color"
        android:gravity="center"
        android:padding="@dimen/medium_text"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />

</LinearLayout>