<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smaller_text"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/very_small_text"
        android:paddingLeft="@dimen/smaller_text"
        android:paddingRight="@dimen/smaller_text"
        android:paddingTop="@dimen/smaller_text">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/order_medicines"
            android:src="@drawable/order_medicine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/very_small_text"
                android:layout_marginStart="@dimen/very_small_text"
                android:text="@string/product_name"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/very_small_text"
                android:layout_marginStart="@dimen/very_small_text"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/horizontal_line"
                    android:text="@string/amount"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/smaller_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_text"
                    android:layout_marginStart="@dimen/small_text"
                    android:text="@string/offer"
                    android:textColor="@color/red"
                    android:textSize="@dimen/smaller_text" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/very_small_text"
                android:layout_marginStart="@dimen/very_small_text"
                android:text="@string/amt"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/small_text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/blue_curved_rectangle"
                android:gravity="center"
                android:padding="@dimen/mini_text"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="@dimen/smaller_text"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>